login function works

--- a/.env
+++ b/.env
@@ -2,3 +2,6 @@ DB_NAME=nama_database
 DB_USER=nama_pengguna
 DB_PASSWORD=sandi_pengguna
 DB_HOST=localhost
+
+ACCESS_TOKEN_SECRET = pohfjsbfeahfugadalfbjkaehaeflknaefhoawadwahw
+REFRESH_TOKEN_SECRET = annawfwafawd2jhwdhwabadiwhjajejbfjdbaawdwamdfw
