--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express": "^4.18.2",
     "google-auth-library": "^9.4.1",
     "jsonwebtoken": "^9.0.2",
+    "moment": "^2.29.4",
     "mysql2": "^3.6.5",
     "nodemon": "^3.0.1",
     "sequelize": "^6.35.1",
